Make the build silent by default
Make it verbose when building the Debian packages.

--- a/debian/rules
+++ b/debian/rules
@@ -48,6 +48,7 @@ build-tree/config.status: configure
 	install -d build-tree
 	cd build-tree && ../configure $(confflags) \
 		CFLAGS="$(CFLAGS)" CXXFLAGS="$(CXXFLAGS)" \
+		--disable-silent-rules \
 		--prefix=/usr \
 		--mandir=\$${datadir}/man \
 		--infodir=\$${datadir}/info \
