--- a/dpkg-split/Makefile.am
+++ b/dpkg-split/Makefile.am
@@ -30,13 +30,13 @@ EXTRA_DIST = mksplit.pl
 CLEANFILES = $(pkglib_SCRIPTS)
 
 
-do_perl_subst = sed -e "s:^\#![:space:]*/usr/bin/perl:\#!$(PERL):"
+do_perl_subst = $(AM_V_GEN) sed -e "s:^\#![:space:]*/usr/bin/perl:\#!$(PERL):"
 
 
 %: %.pl Makefile
 	@test -d `dirname $@` || $(mkdir_p) `dirname $@`
 	$(do_perl_subst) <$< >$@
-	chmod +x $@
+	$(AM_V_at) chmod +x $@
 
 
 install-data-local:
