Dpkg::Control::Fields: official list of control fields
This new module provides an official list of control fields as
well as many functions to query that list and the meta-information
associated to each list.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -96,6 +96,7 @@ nobase_dist_perllib_DATA = \
 	Dpkg/Checksums.pm \
 	Dpkg/Compression.pm \
 	Dpkg/Control.pm \
+	Dpkg/Control/Fields.pm \
 	Dpkg/Control/Info.pm \
 	Dpkg/Control/Hash.pm \
 	Dpkg/Control/Types.pm \
