--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -19,6 +19,7 @@ scripts/Dpkg/Changelog.pm
 scripts/Dpkg/Changelog/Debian.pm
 scripts/Dpkg/Checksums.pm
 scripts/Dpkg/Control.pm
+scripts/Dpkg/Control/Fields.pm
 scripts/Dpkg/Control/Info.pm
 scripts/Dpkg/Control/Hash.pm
 scripts/Dpkg/Control/Types.pm
