--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -20,6 +20,8 @@ scripts/Dpkg/Changelog/Debian.pm
 scripts/Dpkg/Checksums.pm
 scripts/Dpkg/Control.pm
 scripts/Dpkg/Control/Info.pm
+scripts/Dpkg/Control/Hash.pm
+scripts/Dpkg/Control/Types.pm
 scripts/Dpkg/Deps.pm
 scripts/Dpkg/ErrorHandling.pm
 scripts/Dpkg/Fields.pm
