Integrate dpkg-ftp into dselect
It requires perl to work but don't add it as a dependency
but only as a suggests and instead have a nice error
message to invite the user to install the perl package.

Other minor changes include removal of latin1 characters,
moving the README.mirrors file inside the method directory
and renaming the Dpkg::Ftp module to Dselect::Ftp.

--- a/debian/control
+++ b/debian/control
@@ -57,7 +57,9 @@ Package: dselect
 Priority: optional
 Architecture: any
 Depends: ${shlibs:Depends}, dpkg (>= 1.13.1)
-Replaces: dpkg (<< 1.10.3)
+Suggests: perl
+Conflicts: dpkg-ftp
+Replaces: dpkg (<< 1.10.3), dpkg-ftp
 Description: Debian package management front-end
  dselect is a high-level interface for managing the installation and
  removal of Debian software packages.
