--- a/dselect/methods/Makefile.am
+++ b/dselect/methods/Makefile.am
@@ -9,7 +9,10 @@ nobase_dist_methods_DATA = \
 	disk/desc.harddisk \
 	disk/desc.mounted \
 	floppy/names \
-	floppy/desc.floppy
+	floppy/desc.floppy \
+	ftp/names \
+	ftp/desc.ftp \
+	ftp/README.mirrors.txt
 
 nobase_dist_methods_SCRIPTS = \
 	disk/setup \
@@ -17,10 +20,16 @@ nobase_dist_methods_SCRIPTS = \
 	disk/install \
 	floppy/setup \
 	floppy/update \
-	floppy/install
+	floppy/install \
+	ftp/setup \
+	ftp/update \
+	ftp/install
 
+perllibdir = $(PERL_LIBDIR)
+nobase_dist_perllib_DATA = Debian/Dselect/Ftp.pm
 
 install-data-local:
 	$(mkdir_p) $(DESTDIR)$(admindir)/methods/mnt
 	$(mkdir_p) $(DESTDIR)$(admindir)/methods/disk
 	$(mkdir_p) $(DESTDIR)$(admindir)/methods/floppy
+	$(mkdir_p) $(DESTDIR)$(admindir)/methods/ftp
