--- a/configure.ac
+++ b/configure.ac
@@ -95,6 +95,7 @@ DPKG_C_ATTRIBUTE
 
 # Checks for library functions.
 DPKG_FUNC_VA_COPY
+DPKG_CHECK_DECL([WCOREDUMP], [sys/wait.h])
 DPKG_CHECK_COMPAT_FUNCS([getopt getopt_long obstack_free \
                          vsnprintf snprintf strnlen strerror strsignal \
                          scandir alphasort unsetenv])
