build: Check for C99 snprintf family of functions
We need the new semantics that allow passing NULL and 0 size to retrieve
the full size of the formatted string. Add a new DPKG_FUNC_C99_SNPRINTF
macro and remove the simple compat checks for snprintf and vsnprintf.

--- a/configure.ac
+++ b/configure.ac
@@ -96,9 +96,10 @@ DPKG_C_ATTRIBUTE
 
 # Checks for library functions.
 DPKG_FUNC_VA_COPY
+DPKG_FUNC_C99_SNPRINTF
 DPKG_CHECK_DECL([WCOREDUMP], [sys/wait.h])
 DPKG_CHECK_COMPAT_FUNCS([getopt getopt_long obstack_free \
-                         vsnprintf snprintf strnlen strerror strsignal \
+                         strnlen strerror strsignal \
                          scandir alphasort unsetenv])
 AC_CHECK_FUNCS([strtoul isascii bcopy memcpy lchown setsid getdtablesize])
 
