Integrate dpkg-multicd into dselect
The `multicd' package was initially written by Heiko Schlittermann
<heiko@lotte.sax.de> based on builtin access methods written by Ian
Jackson <ian@chiark.greenend.org.uk>.  The final packaging as well as
cleanups were made by Martin Schulze <joey@infodrom.north.de> who also
put this package together for the slink release (Debian GNU/Linux
2.1).

This commit includes the raw files as provided in version 0.21 of dpkg-multicd
(except for a few whitespaces cleanups).

The dpkg-scanpackages fork has been left out since the required features
have been merged in the official dpkg-scanpackages. Closes: #516631

--- a/debian/control
+++ b/debian/control
@@ -58,8 +58,8 @@ Priority: optional
 Architecture: any
 Depends: ${shlibs:Depends}, dpkg (>= 1.13.1)
 Suggests: perl
-Conflicts: dpkg-ftp
-Replaces: dpkg (<< 1.10.3), dpkg-ftp
+Conflicts: dpkg-ftp, dpkg-multicd
+Replaces: dpkg (<< 1.10.3), dpkg-ftp, dpkg-multicd
 Description: Debian package management front-end
  dselect is a high-level interface for managing the installation and
  removal of Debian software packages.
