--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -18,6 +18,7 @@ lib/dpkg/nfmalloc.c
 lib/dpkg/parse.c
 lib/dpkg/parsehelp.c
 lib/dpkg/path.c
+lib/dpkg/pkg.c
 lib/dpkg/pkg-array.c
 lib/dpkg/pkg-list.c
 lib/dpkg/progress.c
