--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -17,7 +17,12 @@ lib/dpkg/myopt-util.c
 lib/dpkg/nfmalloc.c
 lib/dpkg/parse.c
 lib/dpkg/parsehelp.c
+lib/dpkg/path.c
+lib/dpkg/pkg-array.c
+lib/dpkg/pkg-list.c
+lib/dpkg/progress.c
 lib/dpkg/showpkg.c
+lib/dpkg/string.c
 lib/dpkg/subproc.c
 lib/dpkg/tarfn.c
 lib/dpkg/trigdeferred.l
