doc: Add doxygen support
The code should start getting switched to document using JavaDoc
style comments, at least for public declarations.

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,6 +59,14 @@ EXTRA_DIST = \
 	debian/shlibs.default \
 	debian/shlibs.override
 
+.PHONY: doc
+
+doc:
+	$(DOXYGEN) doc/Doxyfile
+
+clean-local:
+	rm -rf doc/html/
+
 .PHONY: ChangeLog
 DISTCLEANFILES = ChangeLog
 
