libcompat: Add top_builddir to the include path
Needed as the modules use <config.h>.

Signed-off-by: Guillem Jover <guillem@debian.org>

--- a/lib/compat/Makefile.am
+++ b/lib/compat/Makefile.am
@@ -1,7 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
 AM_CPPFLAGS = \
-	-idirafter $(top_srcdir)/lib/compat
+	-idirafter $(top_srcdir)/lib/compat \
+	-I$(top_builddir)
 
 
 noinst_LIBRARIES = libcompat.a
