--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -17,8 +17,11 @@ scripts/changelog/debian.pl
 scripts/Dpkg/Arch.pm
 scripts/Dpkg/Changelog.pm
 scripts/Dpkg/Changelog/Debian.pm
+scripts/Dpkg/Changelog/Entry.pm
+scripts/Dpkg/Changelog/Entry/Debian.pm
 scripts/Dpkg/Checksums.pm
 scripts/Dpkg/Control.pm
+scripts/Dpkg/Control/Changelog.pm
 scripts/Dpkg/Control/Fields.pm
 scripts/Dpkg/Control/Info.pm
 scripts/Dpkg/Control/Hash.pm
