Dpkg::Index: new module
This module represents an ordered set of Dpkg::Control objects.
It ensures uniqueness for objects based on a customisable key.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -102,6 +102,7 @@ nobase_dist_perllib_DATA = \
 	Dpkg/ErrorHandling.pm \
 	Dpkg/Exit.pm \
 	Dpkg/Gettext.pm \
+	Dpkg/Index.pm \
 	Dpkg/IPC.pm \
 	Dpkg/Path.pm \
 	Dpkg/Shlibs.pm \
