--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -25,6 +25,7 @@ scripts/Dpkg/Control/Hash.pm
 scripts/Dpkg/Control/Types.pm
 scripts/Dpkg/Deps.pm
 scripts/Dpkg/ErrorHandling.pm
+scripts/Dpkg/Index.pm
 scripts/Dpkg/IPC.pm
 scripts/Dpkg/Shlibs.pm
 scripts/Dpkg/Shlibs/Objdump.pm
