Move parse_changelog() to a separate module Dpkg::Changelog::Parse
Despite its name, this function does not actuallay parse anything by
itself, it just calls external parsers and returns their result. This
interface is largely used by other tools and is not tied with any of the
other Dpkg::Changelog modules so it's best kept separate.

Many scripts have to be updated to cope with the renaming.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -93,6 +93,7 @@ nobase_dist_perllib_DATA = \
 	Dpkg/Changelog/Debian.pm \
 	Dpkg/Changelog/Entry.pm \
 	Dpkg/Changelog/Entry/Debian.pm \
+	Dpkg/Changelog/Parse.pm \
 	Dpkg/Checksums.pm \
 	Dpkg/Compression.pm \
 	Dpkg/Control.pm \
