Add .mailmap to EXTRA_DIST
Missed in commit 722fa5660d52ac75db0b21a86004fc10f8f580bb.

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,7 @@ ACLOCAL_AMFLAGS = -I m4
 dist_pkgdata_DATA = cputable ostable triplettable
 
 EXTRA_DIST = \
+	.mailmap \
 	ChangeLog.old \
 	README.translators \
 	doc/README.api \
