debian/rules: use “$(MAKE)” instead of “make”

--- a/debian/rules
+++ b/debian/rules
@@ -129,7 +129,7 @@ binary: binary-arch binary-indep
 clean:
 	dh_testdir
 
-	[ ! -f Makefile ] || make distclean
+	[ ! -f Makefile ] || $(MAKE) distclean
 	rm -rf build-tree
 	dh_clean
 
