--- a/configure.ac
+++ b/configure.ac
@@ -59,6 +59,7 @@ AC_PROG_LEX
 AC_PROG_RANLIB
 AC_CHECK_PROGS([DOXYGEN], [doxygen])
 AC_CHECK_PROG([HAVE_DOT], [dot], [YES], [NO])
+DPKG_PROG_PO4A
 DPKG_PROG_PERL
 
 # Checks for operating system services and capabilities.
