Rename Dpkg::Source::Compressor into Dpkg::Compression::Compressor

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -61,6 +61,7 @@ nobase_dist_perllib_DATA = \
 	Dpkg/Changelog/Parse.pm \
 	Dpkg/Checksums.pm \
 	Dpkg/Compression.pm \
+	Dpkg/Compression/Compressor.pm \
 	Dpkg/Conf.pm \
 	Dpkg/Control.pm \
 	Dpkg/Control/Changelog.pm \
@@ -82,7 +83,6 @@ nobase_dist_perllib_DATA = \
 	Dpkg/Shlibs/Cppfilt.pm \
 	Dpkg/Source/Archive.pm \
 	Dpkg/Source/CompressedFile.pm \
-	Dpkg/Source/Compressor.pm \
 	Dpkg/Source/Functions.pm \
 	Dpkg/Source/Package.pm \
 	Dpkg/Source/Package/V1.pm \
