--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -21,6 +21,7 @@ scripts/Dpkg/Changelog/Entry.pm
 scripts/Dpkg/Changelog/Entry/Debian.pm
 scripts/Dpkg/Changelog/Parse.pm
 scripts/Dpkg/Checksums.pm
+scripts/Dpkg/Conf.pm
 scripts/Dpkg/Control.pm
 scripts/Dpkg/Control/Changelog.pm
 scripts/Dpkg/Control/Fields.pm
