man: Add new deb-split.5 manual page

--- a/man/po/po4a.cfg
+++ b/man/po/po4a.cfg
@@ -23,6 +23,11 @@
            add_$lang:po/$lang.add
 
 
+[type:man] deb-split.5                                      \
+           $lang:$(builddir)/$lang/deb-split.5              \
+           add_$lang:po/$lang.add
+
+
 [type:man] deb-version.5              \
            $lang:$(builddir)/$lang/deb-version.5            \
            add_$lang:po/$lang.add
