build: Add debian/source/ files to EXTRA_DIST

--- a/Makefile.am
+++ b/Makefile.am
@@ -54,6 +54,8 @@ EXTRA_DIST = \
 	debian/dselect.preinst \
 	debian/dselect.lintian-overrides \
 	debian/source.lintian-overrides \
+	debian/source/format \
+	debian/source/options \
 	debian/usertags \
 	debian/rules \
 	debian/shlibs.default \
