build: Split test_cases and test_data from EXTRA_DIST
Avoid duplicated lists of files. Also this way we have proper
depdendencies in the check target for test_data files.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -43,44 +43,9 @@ EXTRA_DIST = \
 	dpkg-vendor.pl \
 	update-alternatives.pl \
 	changelog/debian.pl \
-	t/000_pod.t \
-	t/100_Dpkg_Version.t \
-	t/200_Dpkg_Shlibs.t \
-	t/200_Dpkg_Shlibs/symbols.fake-1 \
-	t/200_Dpkg_Shlibs/symbols.fake-2 \
-	t/200_Dpkg_Shlibs/symbols.fake-3 \
-	t/200_Dpkg_Shlibs/symbols.include-1 \
-	t/200_Dpkg_Shlibs/symbols.include-2 \
-	t/200_Dpkg_Shlibs/symbols.include-3 \
-	t/200_Dpkg_Shlibs/symbols.tags.in \
-	t/200_Dpkg_Shlibs/symboltags.c \
-	t/200_Dpkg_Shlibs/ld.so.conf \
-	t/200_Dpkg_Shlibs/ld.so.conf_2 \
-	t/200_Dpkg_Shlibs/ld.so.conf.d/normal.conf \
-	t/200_Dpkg_Shlibs/ld.so.conf.d/inf_recurse.conf \
-	t/200_Dpkg_Shlibs/ld.so.conf.d/recursive.conf \
-	t/200_Dpkg_Shlibs/objdump.glib-ia64 \
-	t/200_Dpkg_Shlibs/objdump.libc6-2.3 \
-	t/200_Dpkg_Shlibs/objdump.libc6-2.6 \
-	t/200_Dpkg_Shlibs/objdump.dbd-pg \
-	t/200_Dpkg_Shlibs/objdump.ls \
-	t/200_Dpkg_Shlibs/objdump.tags-amd64 \
-	t/200_Dpkg_Shlibs/objdump.tags-i386 \
-	t/300_Dpkg_BuildOptions.t \
-	t/400_Dpkg_Deps.t \
-	t/500_Dpkg_Path.t \
-	t/600_Dpkg_Changelog.t \
-	t/600_Dpkg_Changelog/countme \
-	t/600_Dpkg_Changelog/fields \
-	t/600_Dpkg_Changelog/misplaced-tz \
-	t/600_Dpkg_Changelog/regressions \
-	t/600_Dpkg_Changelog/shadow \
-	t/700_Dpkg_Control.t \
-	t/700_Dpkg_Control/control-1 \
-	t/750_Dpkg_Substvars.t \
-	t/750_Dpkg_Substvars/substvars1 \
-	t/800_Dpkg_IPC.t \
-	t/900_update_alternatives.t
+	$(test_cases) \
+	$(test_data)
+
 
 CLEANFILES = \
 	$(bin_SCRIPTS) $(changelog_SCRIPTS)
@@ -165,20 +130,61 @@ uninstall-local:
 	rm -f $(DESTDIR)$(sysconfdir)/alternatives/README
 	rm -f $(DESTDIR)$(sbindir)/install-info
 
-TEST_FILES= $(srcdir)/t/*.t
 TEST_VERBOSE= 0
+
+test_cases = \
+	t/000_pod.t \
+	t/100_Dpkg_Version.t \
+	t/200_Dpkg_Shlibs.t \
+	t/300_Dpkg_BuildOptions.t \
+	t/400_Dpkg_Deps.t \
+	t/500_Dpkg_Path.t \
+	t/600_Dpkg_Changelog.t \
+	t/700_Dpkg_Control.t \
+	t/750_Dpkg_Substvars.t \
+	t/800_Dpkg_IPC.t \
+	t/900_update_alternatives.t
+
+test_data = \
+	t/200_Dpkg_Shlibs/symbols.fake-1 \
+	t/200_Dpkg_Shlibs/symbols.fake-2 \
+	t/200_Dpkg_Shlibs/symbols.fake-3 \
+	t/200_Dpkg_Shlibs/symbols.include-1 \
+	t/200_Dpkg_Shlibs/symbols.include-2 \
+	t/200_Dpkg_Shlibs/symbols.include-3 \
+	t/200_Dpkg_Shlibs/symbols.tags.in \
+	t/200_Dpkg_Shlibs/symboltags.c \
+	t/200_Dpkg_Shlibs/ld.so.conf \
+	t/200_Dpkg_Shlibs/ld.so.conf_2 \
+	t/200_Dpkg_Shlibs/ld.so.conf.d/normal.conf \
+	t/200_Dpkg_Shlibs/ld.so.conf.d/inf_recurse.conf \
+	t/200_Dpkg_Shlibs/ld.so.conf.d/recursive.conf \
+	t/200_Dpkg_Shlibs/objdump.glib-ia64 \
+	t/200_Dpkg_Shlibs/objdump.libc6-2.3 \
+	t/200_Dpkg_Shlibs/objdump.libc6-2.6 \
+	t/200_Dpkg_Shlibs/objdump.dbd-pg \
+	t/200_Dpkg_Shlibs/objdump.ls \
+	t/200_Dpkg_Shlibs/objdump.tags-amd64 \
+	t/200_Dpkg_Shlibs/objdump.tags-i386 \
+	t/600_Dpkg_Changelog/countme \
+	t/600_Dpkg_Changelog/fields \
+	t/600_Dpkg_Changelog/misplaced-tz \
+	t/600_Dpkg_Changelog/regressions \
+	t/600_Dpkg_Changelog/shadow \
+	t/700_Dpkg_Control/control-1 \
+	t/750_Dpkg_Substvars/substvars1
 
 clean-local:
 	rm -fr t.tmp
 
-check: $(TEST_FILES) $(wildcard $(srcdir)/t/200_Dpkg_Shlibs/ld.so.conf*)
+check: $(test_data) $(test_cases)
 	$(mkdir_p) t.tmp
 	PATH="$(top_builddir)/src:$(top_builddir)/scripts:$(PATH)" \
 	  srcdir=$(srcdir) DPKG_DATADIR=$(srcdir)/.. \
 	  PERL5LIB=$(srcdir) PERL_DL_NONLAZY=1 \
 	  $(PERL) -I$(srcdir) -MExtUtils::Command::MM \
 	          -e "test_harness($(TEST_VERBOSE), '.')" \
-	          $(TEST_FILES)
+	          $(addprefix $(srcdir)/,$(test_cases))
 
 objdump_lib_name = lib`basename $@`.so
 $(srcdir)/t/200_Dpkg_Shlibs/objdump.tags-amd64 $(srcdir)/t/200_Dpkg_Shlibs/objdump.tags-i386: $(srcdir)/t/200_Dpkg_Shlibs/symboltags.c
