libdpkg: New command module
This should ease refactoring some of the duplicate code dealing with
command execution. It will also make the code clearer.

--- a/lib/dpkg/Makefile.am
+++ b/lib/dpkg/Makefile.am
@@ -22,6 +22,7 @@ libdpkg_a_SOURCES = \
 	ar.c ar.h \
 	buffer.c buffer.h \
 	cleanup.c \
+	command.c command.h \
 	compress.c compress.h \
 	database.c \
 	dbmodify.c \
