--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,6 +3,7 @@
 lib/dpkg/ar.c
 lib/dpkg/buffer.c
 lib/dpkg/cleanup.c
+lib/dpkg/command.c
 lib/dpkg/compression.c
 lib/dpkg/database.c
 lib/dpkg/dbmodify.c
