--- a/debian/control
+++ b/debian/control
@@ -44,7 +44,7 @@ Depends: dpkg (>= 1.15.4), perl5, perl-modules, bzip2, lzma, xz-utils,
  patch (>= 2.2-1), make, binutils, libtimedate-perl,
  base-files (>= 5.0.0), ${misc:Depends}
 Recommends: gcc | c-compiler, build-essential, fakeroot, gnupg, gpgv
-Suggests: debian-keyring, debian-maintainers
+Suggests: debian-keyring
 Conflicts: dpkg-cross (<< 2.0.0), devscripts (<< 2.10.26)
 Replaces: manpages-pl (<= 20051117-1)
 Description: Debian package development tools
