--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,6 @@
 # This is the list of all source files with translatable strings.
 
+lib/dpkg/ar.c
 lib/dpkg/buffer.c
 lib/dpkg/cleanup.c
 lib/dpkg/compression.c
