Change dpkg-dev to Depend on perl instead of perl5 and perl-modules

--- a/debian/control
+++ b/debian/control
@@ -40,7 +40,7 @@ Package: dpkg-dev
 Section: utils
 Priority: optional
 Architecture: all
-Depends: dpkg (>= 1.15.4), perl5, perl-modules, bzip2, lzma, xz-utils,
+Depends: dpkg (>= 1.15.4), perl, bzip2, lzma, xz-utils,
  patch (>= 2.2-1), make, binutils, libtimedate-perl,
  base-files (>= 5.0.0), ${misc:Depends}
 Recommends: gcc | c-compiler, build-essential, fakeroot, gnupg, gpgv
