--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,7 +4,7 @@ lib/dpkg/ar.c
 lib/dpkg/buffer.c
 lib/dpkg/cleanup.c
 lib/dpkg/command.c
-lib/dpkg/compression.c
+lib/dpkg/compress.c
 lib/dpkg/database.c
 lib/dpkg/dbmodify.c
 lib/dpkg/dump.c
