Dpkg::Interface::Storable: common convenience methods for serialization of objects

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -75,6 +75,7 @@ nobase_dist_perllib_DATA = \
 	Dpkg/Exit.pm \
 	Dpkg/Gettext.pm \
 	Dpkg/Index.pm \
+	Dpkg/Interface/Storable.pm \
 	Dpkg/IPC.pm \
 	Dpkg/Path.pm \
 	Dpkg/Shlibs.pm \
