--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -34,6 +34,7 @@ scripts/Dpkg/Control/Types.pm
 scripts/Dpkg/Deps.pm
 scripts/Dpkg/ErrorHandling.pm
 scripts/Dpkg/Index.pm
+scripts/Dpkg/Interface/Storable.pm
 scripts/Dpkg/IPC.pm
 scripts/Dpkg/Shlibs.pm
 scripts/Dpkg/Shlibs/Objdump.pm
