libdpkg: Move package formatting support to a new pkg-format module
Move declarations from dpkg-db.h to a new pkg-format.h, and rename
showpkg.c to pkg-format.c.

--- a/lib/dpkg/Makefile.am
+++ b/lib/dpkg/Makefile.am
@@ -45,9 +45,9 @@ libdpkg_a_SOURCES = \
 	path.c path.h \
 	pkg.c pkg.h \
 	pkg-array.c pkg-array.h \
+	pkg-format.c pkg-format.h \
 	pkg-list.c pkg-list.h \
 	progress.c progress.h \
-	showpkg.c \
 	string.c string.h \
 	subproc.c subproc.h \
 	tarfn.c tarfn.h \
