--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -23,9 +23,9 @@ lib/dpkg/parsehelp.c
 lib/dpkg/path.c
 lib/dpkg/pkg.c
 lib/dpkg/pkg-array.c
+lib/dpkg/pkg-format.c
 lib/dpkg/pkg-list.c
 lib/dpkg/progress.c
-lib/dpkg/showpkg.c
 lib/dpkg/string.c
 lib/dpkg/subproc.c
 lib/dpkg/tarfn.c
