po: Add missing files to POTFILES

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -10,6 +10,7 @@ lib/dpkg/dbmodify.c
 lib/dpkg/dump.c
 lib/dpkg/ehandle.c
 lib/dpkg/fields.c
+lib/dpkg/file.c
 lib/dpkg/lock.c
 lib/dpkg/log.c
 lib/dpkg/md5.c
