--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -15,6 +15,7 @@ scripts/dpkg-shlibdeps.pl
 scripts/dpkg-source.pl
 scripts/changelog/debian.pl
 scripts/Dpkg/Arch.pm
+scripts/Dpkg/BuildOptions.pm
 scripts/Dpkg/Compression.pm
 scripts/Dpkg/Compression/FileHandle.pm
 scripts/Dpkg/Compression/Process.pm
@@ -33,11 +34,15 @@ scripts/Dpkg/Control/Hash.pm
 scripts/Dpkg/Control/Types.pm
 scripts/Dpkg/Deps.pm
 scripts/Dpkg/ErrorHandling.pm
+scripts/Dpkg/Exit.pm
 scripts/Dpkg/Index.pm
 scripts/Dpkg/Interface/Storable.pm
 scripts/Dpkg/IPC.pm
+scripts/Dpkg/Path.pm
 scripts/Dpkg/Shlibs.pm
+scripts/Dpkg/Shlibs/Cppfilt.pm
 scripts/Dpkg/Shlibs/Objdump.pm
+scripts/Dpkg/Shlibs/Symbol.pm
 scripts/Dpkg/Shlibs/SymbolFile.pm
 scripts/Dpkg/Source/Archive.pm
 scripts/Dpkg/Source/Functions.pm
@@ -53,5 +58,7 @@ scripts/Dpkg/Source/Package/V3/quilt.pm
 scripts/Dpkg/Substvars.pm
 scripts/Dpkg/Vars.pm
 scripts/Dpkg/Vendor.pm
+scripts/Dpkg/Vendor/Debian.pm
+scripts/Dpkg/Vendor/Default.pm
 scripts/Dpkg/Vendor/Ubuntu.pm
 scripts/Dpkg/Version.pm
